# psyz

./: .clang-format  .gitignore  .gitmodules  LICENSE  Makefile  PORTING_GUIDE.md  README.md
.github/workflows/: build.yaml  decomp.yaml  linter.yaml  samples.yaml
decomp/: Makefile  diff_settings.py  export.csv  psyq-gen.sh  psyq.ld  psyq400.bin.sha256  rm-o-dups-350.sh  rm-o-dups-400.sh  rm-o-dups-470.sh  splat400.yaml  splat470.yaml  symbols.400.txt
decomp/include/: common.h  libds.h  libtap.h
decomp/sdk/: Makefile
decomp/src/libapi/: pad.c
decomp/src/libcard/: a74.c  a75.c  a76.c  a78.c  a79.c  a80.c  a88.c  a92.c  a93.c  c112.c  c171.c  c172.c  c173.c  card.c  end.c  format.c  init.c  patch.c
decomp/src/libcd/: bios.c  iso9660.c  libcd_private.h  sys.c  toc.c
decomp/src/libcomb/: comb.c
decomp/src/libetc/: intr.c  pad.c  vsync.c
decomp/src/libgpu/: font.c  prim.c  sys.c  tmd.c
decomp/src/libgte/: geo_00.c  geo_01.c  ratan.c  sincos.c  sqrtbl.c
decomp/src/libsnd/: cres.c  decres.c  dmyprint.c  libsnd_private.h  pause.c  play.c  playmode.c  replay.c  sscall.c  ssclose.c  sscres.c  ssend.c  ssinit.c  ssinit_c.c  ssinit_h.c  ssloop.c  ssopenp.c  ssplay.c  ssquit.c  sssattr.c  sssmv.c  ssstart.c  ssstop.c  sssv.c  sstable.c  sstick.c  sstickcb.c  ssvol.c  ut_ako.c  ut_autop.c  ut_autov.c  ut_cadsr.c  ut_key.c  ut_keyv.c  ut_rdel.c  ut_rdep.c  ut_rev.c  ut_roff.c  ut_ron.c  ut_vvol.c  (+20 more)
decomp/src/libspu/: libdma.h  libspu_private.h  s_cb.c  s_crwa.c  s_dcb.c  s_gtm.c  s_gva.c  s_i.c  s_ih.c  s_ini.c  s_it.c  s_itc.c  s_m.c  s_m_f.c  s_m_init.c  s_m_int.c  s_m_m.c  s_m_util.c  s_m_wsa.c  s_q.c  s_r.c  s_rmp.c  s_sca.c  s_sic.c  s_sk.c  s_snv.c  s_sr.c  s_stm.c  s_stsa.c  s_w.c  s_wp.c  spu.c  sr_gaks.c
psyz/: CMakeLists.txt  Makefile  README.md  psx.mk  test-clang.bat  test.bat
psyz/cmake/: strip_file_prefix.cmake  windows-x86_64.cmake
psyz/include/: abs.h  common.h  convert.h  kernel.h  libapi.h  libc.h  libcard.h  libcd.h  libcomb.h  libds.h  libetc.h  libgpu.h  libgs.h  libgte.h  libhmd.h  libmath.h  libmcrd.h  libmcx.h  libpress.h  libsio.h  libsnd.h  libspu.h  malloc.h  mcgui.h  memory.h  psyz.h  rand.h  romio.h  setjmp.h  types.h
psyz/include/psyz/: assert.h  audio.h  cd.h  dma.h  gpu.h  gte.h  input.h  log.h  overlay.h  overlay_sdl3.h  overlay_sdl3_gl.h  overlay_sdl3_gpu.h  platform.h  spu.h  system.h  timers.h  types.h  video.h
psyz/psxgen/: Makefile  test.c
psyz/src/: audio.h  draw.h  internal.h
psyz/src/platform/: common.c  glad.c  log.c  plat_unix.c  plat_win.c  psyz.c  sdl2_gl.c  sdl3_audio.c  sdl3_common.h  sdl3_gl.c  sdl3_gpu.c  sdl3_log.c
psyz/src/platform/shaders/: build_shaders.sh  clear.frag.glsl  clear.vert.glsl  clear_frag_msl.h  clear_frag_spv.h  clear_vert_msl.h  clear_vert_spv.h  psx.frag.glsl  psx.vert.glsl  psx_frag_msl.h  psx_frag_spv.h  psx_vert_msl.h  psx_vert_spv.h
psyz/src/psyz/: dma.c  libapi.c  libcard.c  libcd.c  libetc.c  libgpu.c  libgs.c  libgte.c  libgte_hw_sqrt.c  libgte_sw_sqrt.c  libpress.c  libsn.c  libsnd.c  libspu.c  psyz_spu.c  spu_gauss.h
psyz/tests/: .gitignore  CMakeLists.txt  stb_image_write.h  test_libapi.cpp  test_libcd.cpp  test_libgpu.cpp  test_libgte.cpp  test_libspu.cpp  test_sdlgl.cpp
psyz/tests/res/: 16bpp.h  4bpp.h  uv4bpp.h
samples/: Makefile
samples/etc_card/: Makefile  card.c  cardio.h
samples/etc_pads/: CMakeLists.txt  Makefile  pads.c
samples/gpu_balls/: Makefile  balls.c  balltex.h
samples/gpu_hello/: Makefile  hello.c
samples/gpu_shapes/: Makefile  shapes.c
samples/gpu_transp/: 16bpp.h  24bpp.h  4bpp.h  8bpp.h  Makefile  transp.c
samples/gs_cube/: Makefile  cube.c
samples/gs_hello/: hello.c
samples/gte_diffuse/: CMakeLists.txt  Makefile  diffuse.c
samples/imgui/: CMakeLists.txt  hello.c  main.cpp
tests/: test_invariant_card.c
